# firedrake

./: .codecov.yml  .coveragerc  .drone.sec  .drone.yml  .gitattributes  .gitignore  .gitmodules  .jenkins.sh  .mailmap  .test_durations  .travis.yml  AGENTS.md  AUTHORS  AUTHORS.rst  CITATION.cff  CITATION.md  CITATION.rst  CONTRIBUTING.md  DESIGN.md  Dockerfile  INSTALL  Jenkinsfile  Jenkinsfile~  LICENSE  MANIFEST.in  Makefile  Makefile.in  README  README.md  README.rst  Vagrantfile  aclocal.m4  acx_blas.m4  acx_lapack.m4  assign_local_size.mlir  assign_local_size.txt  assign_loop.txt  assign_offloading_demo.py  asv.conf.json  benchmark.py  (+53 more)
.github/: actionlint.yaml  pull_request_template.md
M4R_examples/: eigen.py  hh.py  hh1_kings.py  hh_eigen.py  hh_example.py  hh_linear.py  poisson_linear.py  poisson_test.py  test.py  test_1dpoisson.py  test_eigensolver.py
bench/: OPTIMIZATION_NOTES.md  bench_entity_orientations.py  bench_stages.py  verify_topology.py
benchmarks/: HPC_demo.py  TODO.md  bakeoff.py  test_demo.py
debian/: changelog  control  copyright  fluidity.install  python-fluidity.install  rules
debug/: C++_Debug.cpp  Debug.F90  Debug_Parameters.F90  Diagnostic_Output.F90  Makefile.dependencies  Makefile.in
demo/: adv_diff.py  adv_diff_mpi.py  adv_diff_nonsplit.py  aero.py  aero_kernels.py  airfoil.py  airfoil_kernels.py  airfoil_vector.py  airfoil_vector_kernels.py  burgers.py  computeind.pyx  extrusion_mp_ro.py  extrusion_mp_rw.py  ffc_parameters.py  jacobi.py  laplace_ffc.py  mass2d_debug.py  mass2d_ffc.py  mass2d_mpi.py  mass2d_triangle.py  mass_vector_ffc.py  stupid_mpi.py  triangle_reader.py  triangle_reader_extr.py  weak_bcs_ffc.py
demos/: Makefile  demo_references.bib  test_demos_run.py
diderot/: all.sh
doc/: pyop2.tex
docker/: Dockerfile.complex  Dockerfile.docdeps  Dockerfile.env  Dockerfile.firedrake  Dockerfile.firedrake-spack  Dockerfile.jupyter  Dockerfile.petscenv  Dockerfile.spack  Dockerfile.spack-env  Dockerfile.spack-firedrake  Dockerfile.testing  Dockerfile.vanilla
docs/: Makefile  ipython_kernel_config.py  networkx_intersphinx  server.py
dumbdata/: fsi3_P5_P3_Argyris_nref3_0.001_CN_shift1_biharmonic_test.txt
evtk/: LICENSE  __init__.py  vtk.py
femtools/: Adjacency_Lists.F90  AuxilaryOptions.F90  CGAL_Tools.F90  CGAL_Tools_C.cpp  CVTools.F90  CV_Face_Values.F90  CV_Faces.F90  CV_Options.F90  CV_Shape_Functions.F90  C_Interfaces.c  C_Interfaces_Fortran.F90  Cell_Numbering.F90  Colouring.F90  Data_structures.F90  Data_structures_C.c  Detector_Data_Types.F90  Detector_Move_Lagrangian.F90  Detector_Parallel.F90  Detector_Tools.F90  Dynamic_Bin_Sort.F90  Element_Intersection.cpp  Element_Numbering.F90  Element_set.F90  Elements.F90  Embed_Python_Fortran.F90  EventCounter.F90  Exodusii_C_Interface.c  Exodusii_Common.F90  Exodusii_F_Interface.F90  FETools.F90  Fiat_Interface.F90  Field_Options.F90  Field_derivatives.F90  Fields.F90  Fields_Allocates.F90  Fields_Base.F90  Fields_Calculations.F90  Fields_Data_Types.F90  Fields_Halos.F90  Fields_Manipulation.F90  (+104 more)
firedrake/: __future__.py  __init__.py  _deprecation.py  _functionspaceimpl_cy.pyx  _version.py  adapt.py  adaptive_variational_solver.py  assemble.py  assemble_expressions.py  assembly_cache.py  assign.py  bcs.py  cfunction.py  checkpointing.py  citations.py  cofunction.py  configuration.py  constant.py  core_types.pyx  deflation.py  device.py  dmhooks.py  dmplex.c  dmplex.pxi  dmplex.py  dmplex.pyx  dmplexinc.pxi  dwr.py  eigensolver.py  eigensolver_utils.py  embedding.py  ensemble.py  ensemblefunction.py  evaluate.h  exceptions.py  expression.py  extrusion_extend.py  extrusion_function.py  extrusion_numbering.c  extrusion_numbering.pyx  (+91 more)
firedrake.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
firedrake_check/: __init__.py
firedrake_citations/: __init__.py
firedrake_configuration/: __init__.py
fldecomp/: Makefile.in  fldgmsh.cpp  fldmain.cpp  fldtriangle.cpp  partition.cpp
implementation/: airfoil.py  op2.py
include/: CGAL_Tools_C.h  Halos_IO.h  (+21 more)
libspud/: AUTHORS  COPYING  Makefile.in  README  aclocal.m4  configure  configure.in
libspud/debian/: changelog  control  diamond.copyright  diamond.dirs  install.diamond  libspud-dev.docs  postinst  python-spud.copyright  rules
libspud/diamond/: COPYING  MANIFEST.in  README.txt  setup.py.in  todo.txt
libspud/diamond/diamond/: TextBufferMarkup.py  attributewidget.py  choice.py  commentwidget.py  config.py  databuttonswidget.py  datatype.py  datawidget.py  debug.py  descriptionwidget.py  dialogs.py  diffview.py  interface.py  mixedtree.py  plist.py  plugins.py.in  preprocess.py.in  pygtkconsole.py  schema.py  schemausage.py  scherror.py  sliceview.py  tree.py  triangle_reader.py  useview.py
libspud/diamond/doc/: main.xml
libspud/diamond/gui/: gui.glade
libspud/diamond/misc/: diamond-bash-completion
libspud/diamond/plugins/: test.py
libspud/diamond/plugins/flml/: show_triangle_mesh.py
libspud/diamond/tests/: to_test.txt
libspud/diamond/tests/plist/: plist.py
libspud/diamond/tests/read_xml/: find_hidden_xmldata.py
libspud/diamond/tests/schema/: first.rnc  first.rng  test_cb_methods.py  test_simple_schema.py
libspud/doc/: Makefile  diamond_manual.tex  spud_manual.tex
libspud/dxdiff/: COPYING  setup.py
libspud/dxdiff/dxdiff/: bimap.py  diff.py  dxdiff  editscript.py  fmes.py  lcs.py  utils.py
libspud/examples/: Makefile.in  README  ballistics.F90  ballistics.rnc  ballistics.rng  ballistics.xml  show_ballistics
libspud/include/: spud  spud.h  spud_enums.h
libspud/python/: libspud.c  libspud.py.ctypes  setup.py  test.flml  test_libspud.py
libspud/schema/: spud_base.rnc  spud_base.rng
libspud/src/: fspud.f90  spud.cpp  spud_interfaces.cpp  tinyxmlparser.cpp
libspud/src/tests/: Makefile.in  test_fspud.f90  test_main.cpp  unittest_tools.f90
libvtkfortran/: AUTHORS  Makefile.in  config.h.in  configure  configure.in  doxygen.conf  fvtkfortran.F90  install-sh  tinyxml.cpp  vtkfortran-dummy.cpp  vtkfortran.cpp  vtkmeshio-dummy.cpp  vtkmeshio.cpp
libvtkfortran/include/: tinyxml.h  vtkmeshio.h
(+2956 files in other folders)
